# dnd-character

./: Cargo.toml  LICENSE  build.rs
schemas/: dnd5eapi.graphql
src/: abilities.rs  classes.rs  lib.rs
src/api/: abilities.rs  classes.rs  mod.rs  shared.rs
tests/: api_test.rs
